syntax = "proto3";
package l2ms; 
import "google/protobuf/empty.proto";
import "common.proto";
option cc_generic_services = true;

message LoginRequest
{
  string account = 1;
}

message LoginResponse
{ 
  ClientError error = 1;
}

message EnterGameRequest
{
  uint64 guid = 1;
  uint64 connection_id = 2;
  string account = 3;
}

message EnterGameResponese
{
  uint64 connection_id = 1;
  uint32 node_id = 2;
}

message LeaveGameRequest
{
  uint64 guid = 1;
}

message DisconnectRequest
{
  uint64 guid = 1;

}

service LoginService 
{
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc EnterGame (EnterGameRequest) returns (EnterGameResponese);
  rpc LeaveGame (LeaveGameRequest) returns (google.protobuf.Empty);
  rpc Disconect (DisconnectRequest) returns (google.protobuf.Empty);  
}